--- a/test2ui/resources/index.html
+++ b/test2ui/resources/index.html
@@ -18,7 +18,7 @@ id="sap-ui-bootstrap" data-sap-ui-libs="sap.ui.commons, sap.ui.table" data-sap-u
 
               toolbar: new sap.ui.commons.Toolbar({items: [
 
-              new sap.ui.commons.Button({text: "Add Country", press:openFirstDialog})
+              new sap.ui.commons.Button({text: "Add A Country", press:openFirstDialog})
 
        ]})});
 
